--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <section class="photo">
         <img
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Mayweather.jpg"
-          alt="Floyd Mayweather"
+          alt="Floyd__Mayweather"
         >
         <span class="rank">1</span>
       </section>
